Finsh off unit tests

--- a/Toy_Robot_Test/Toy_Robot_Test.csproj
+++ b/Toy_Robot_Test/Toy_Robot_Test.csproj
@@ -49,7 +49,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ToyRobotTest.cs" />
+    <Compile Include="CommandTest.cs" />
+    <Compile Include="RobotTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
